# charactors_quotes

./: .gitignore  Cargo.toml  README.md
migrations/2021-06-02-153923_create_charactors/: down.sql  up.sql
src/: api_error.rs  db.rs  lib.rs  main.rs  model.rs  routes.rs  schema.rs
