[package]
name = "api"
version = "0.1.0"
authors = ["CityBear3 <68993998+CityBear3@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
diesel = { version = "1.4.6", features = ["postgres", "r2d2", "uuid", "chrono"] }
dotenv = "0.15.0"
r2d2 = "0.8.9"
serde = "1.0.126"
lazy_static = "1.4.0"
simplelog = "0.10.0"
serde_json = "1.0.64"
